# rhai_egui

./: Cargo.toml  README.md  index.html  rhai_egui.js
.github/workflows/: pages.yml
examples/: simple.rs
src/: lib.rs  main.rs
